--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "swagger-ui",
 	"version": "3.22.4",
+	"private": true,
 	"main": "dist/swagger-ui.js",
 	"repository": {
 		"type": "git",
